test_programs/compile_failure/signed_integer_literal_overflow/src/main.nr
fn main() {
    foo(128)
}

fn foo(_x: i8) {}
